<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".Fragment.CompatibilityResultFragment">

    <TextView
        android:id="@+id/myResultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/resultTitle"
        android:textSize="@dimen/fragmentTitle"
        android:theme="@style/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mySoulNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="ああああああ"
        android:textSize="@dimen/bigTextSize"
        android:theme="@style/errorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myResultTitle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/otherResultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/otherresultTitle"
        android:textSize="@dimen/fragmentTitle"
        android:theme="@style/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySoulNumber"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/otherSoulNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="ああああああ"

        android:textSize="@dimen/bigTextSize"
        android:theme="@style/errorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherResultTitle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/compatibilityDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/detailLink"
        android:textSize="@dimen/smallTextSize"
        android:theme="@style/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherSoulNumber"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_rounded_corners_10dp"
        android:text="@string/backButton"
        android:textColor="@color/mainTextColor"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compatibilityDetail"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>